tests/negative/semantic/init_direct_call/input.ci
structure Foo {
    int x = 0;
    void _init(int v) { self.x = v; }
}

void main() {
    Foo f = clone Foo;
    f._init(42);
}
